Fixed color contrast in the homepage

--- a/css/kb-primo-design.css
+++ b/css/kb-primo-design.css
@@ -118,7 +118,7 @@ div.top-nav-bar {
 prm-search-bar, prm-atoz-search-bar, prm-browse-search-bar, prm-collection-discovery .collection-header-inner.has-transparent-topbar.layout-column {
   background-color: #caf0fe; }
 
-prm-collection-discovery .collection-header-inner.has-transparent-topbar.layout-column {
+prm-collection-discovery .collection-header-inner.has-transparent-topbar.layout-column, prm-topbar .md-button:not(.disable-hover), prm-topbar .md-button.button-over-dark:not(.disable-hover) {
   color: #002e70; }
 
 prm-topbar .md-button,
